# momentum-v1

./: .gitignore  README.md
board/: Makefile  momentum.kicad_pcb  momentum.kicad_prl  momentum.kicad_pro  momentum.kicad_sch  sym-lib-table
board/doc/: ibom.html  momentum_wiring_diagram.drawio
board/fab/: bom.csv  pos.csv
board/fab/gerber/: drill_report.rpt  momentum_panel-CmtUser.gbr  momentum_panel-CuBottom.gbl  momentum_panel-CuTop.gtl  momentum_panel-EdgeCuts.gm1  momentum_panel-MaskBottom.gbs  momentum_panel-MaskTop.gts  momentum_panel-PasteBottom.gbp  momentum_panel-PasteTop.gtp  momentum_panel-SilkBottom.gbo  momentum_panel-SilkTop.gto  momentum_panel.drl  momentum_panel.gbrjob
board/footprints/momentum.pretty/: C_0805_2012Metric_Pad1.18x1.45mm_HandSolder_NoPaste.kicad_mod  MPU-6050_Module.kicad_mod  MT3608_Module_SMD.kicad_mod  MicroSD_Molex_1051620001.kicad_mod  MicroSD_Molex_1051620001_HandSoldering.kicad_mod  Pad.kicad_mod  RPi_Pico.kicad_mod  RPi_Pico_NoSWD.kicad_mod  RPi_Pico_NoSWD_NoLabel.kicad_mod  RPi_Pico_SMD_NoSWD_NoLabel.kicad_mod  R_0805_2012Metric_Pad1.20x1.40mm_HandSolder_NoPaste.kicad_mod
board/panel/: momentum_panel.kicad_pcb  momentum_panel.kicad_prl  momentum_panel.kicad_pro
board/symbols/: momentum.kicad_sym
firmware/: README.md
firmware/src/: CMakeLists.txt  button.c  button.h  config.h  imu.c  imu.h  isr.c  ledstrip.c  ledstrip.h  main.c  pinmap.h  speaker.c  speaker.h  sys.c  sys.h  tick.c  tick.h  tunes_classic_44k1.h  tunes_ep4_44k1.h  utilities.c  utilities.h
firmware/util/: wav2pwm.py
